[gd_scene load_steps=6 format=2]

[ext_resource path="res://PotionCommotion.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/MouseHelper.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/QuitDialog/QuitDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Audio/Audio.tscn" type="PackedScene" id=5]

[node name="PotionCommotion" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="MouseHelper" parent="." instance=ExtResource( 3 )]
visible = false

[node name="QuitDialog" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Audio" parent="." instance=ExtResource( 5 )]
position = Vector2( 6.89605, 0.237579 )
